2010-02-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 5 released.

2010-02-16 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fix mixed-type comparisons, where, like standard set(),
	are allowed, instead of raising TypeError.

2010-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 4 released.
	
	* MsgTree.py: Added MsgTreeElem.splitlines() method as alias of lines().

2010-02-14 S. Thiell <stephane.thiell@cea.fr>
	
	* Updated doc/man pages for latest clush changes and added clubak tool.

	* Worker/Ssh.py: Fix Ssh worker issue where sometimes stderr buffer could
	not be read completely (trac ticket #50).

2010-02-13 S. Thiell <stephane.thiell@cea.fr>
	
	* scripts/clush.py: Comply with clubak by adding -L option that allow
	switching to alternative line mode display (when using -b). Also, sort
	buffers by nodes or nodeset length like clubak (fix trac ticket #54).

2010-02-11 S. Thiell <stephane.thiell@cea.fr>
	
	* Version 1.2 beta 3 released.

	* scripts/clush.py: For clush --copy, when --dest is not specified, set
	the destination path to the source dirname path and not the source full
	path.

	* scripts/clush.py: Added option --nostdin to prevent reading from
	standard input (fix trac ticket #49).

	* Engine/Factory.py: Disable Engine.EPoll automatic selection as an issue
	has been found with clush when stdin is a plain file (<file redirections).
	Engine.Poll is now the default engine for all platforms. Created trac
	ticket #56 to follow this issue.

2010-02-10 S. Thiell <stephane.thiell@cea.fr>
	
	* Worker/Worker.py: Added missing WorkerSimple.last_error() method. Fixed
	worker bad argument error exception.

	* Worker/Ssh.py: Added command, source and dest public instance variable.

	* Worker/Pdsh.py: Added command, source and dest public instance variable.

	* scripts/clush.py: Due to set_info() behaviour modifications in
	multi-thread mode, change some set_info() for set_default() to modify